# myvoiceclone

./: .dockerignore  .env.example  .gitignore  README.md  initial-thoughts.md  pyproject.toml  pytest.ini
configs/: local.yaml  models.yaml
configs/pipelines/: preprocess.default.yaml
db/migrations/: 001_core_schema.sql  002_state_jobs_artifacts.sql  003_vec0_embeddings.sql  004_reports_metrics.sql  005_security_placeholders.sql  006_optional_vec1_probe.sql  007_reconcile_to_plan.sql  008_first_test_observability.sql  009_api_request_logs.sql  010_uuid_primary_ids.sql  011_relax_uuid_id_checks.sql
docs/api/: openapi.md
docs/architecture/: layers.md
docs/baseline/: device_stacks.md
docs/closure/: 00-scope-architecture-closure.md  02-preprocess-pipeline-closure.md  03-corpus-dataset-freeze-closure.md  06-eval-inference-api-closure.md  07-security-governance-retrofit-closure.md
docs/ops/: error-handbook.md  local-setup.md  security-governance.md
docs/templates/: action-plan.md  closure.md  code-review-respond.md  eval-feasibility-study.md  eval-planning.md  eval-reference-anchor.md  eval-state-analysis.md  qna.md  review-findings-ledger.md
infra/docker/: Dockerfile.ai-voiceclone  Dockerfile.preprocess  Dockerfile.train  compose.voiceclone.yaml  compose.yaml
scripts/: bootstrap_env.sh  collect_first_test_evidence.sh  download_models.sh  run_preprocess.sh  run_train_sovits.sh
src/myvoiceclone/: cli.py  config.py  errors.py  evidence.py  ids.py
tests/: conftest.py
tests/api/: test_app_factory.py  test_audit_trace.py  test_error_contract.py  test_first_test_preflight.py  test_first_test_runs.py  test_inference_routes.py  test_routes.py  (+2 more)
(+183 files in other folders)
