[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myvoiceclone"
version = "0.1.0"
description = "Local voice cloning workstation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
api = ["fastapi", "uvicorn", "pydantic"]
cli = ["typer"]
db = ["sqlite-vec"]
audio = ["soundfile", "torchaudio"]
preprocess = ["pyannote.audio", "openai-whisper", "demucs"]
test = ["pytest", "httpx"]
dev = ["ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
myvoiceclone = "myvoiceclone.cli:app"
