[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myvoiceclone"
version = "0.1.0"
description = "Local voice cloning workstation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
api = ["fastapi", "uvicorn", "pydantic", "python-multipart"]
cli = ["typer"]
db = ["sqlite-vec"]
audio = ["soundfile", "torchaudio"]
preprocess = ["pyannote.audio", "openai-whisper", "demucs"]
test = ["pytest", "httpx"]
dev = ["ruff", "mypy"]
first-test = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "typer",
    "sqlite-vec",
    "soundfile",
    "torchaudio",
    "pyannote.audio",
    "openai-whisper",
    "demucs",
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
myvoiceclone = "myvoiceclone.cli:app"
